--- a/public/base/css/style.css
+++ b/public/base/css/style.css
@@ -1880,7 +1880,7 @@ button:focus:not(:focus-visible) {
     outline: 0
 }
 
-button, input, optgroup, select, textarea {
+button, input, optgroup, select, textarea, option {
     margin: 0;
     font-family: inherit;
     font-size: inherit;
