--- a/public/base/css/style.css
+++ b/public/base/css/style.css
@@ -17289,3 +17289,54 @@ select.sort {
         font-size: 16px
     }
 }
+
+
+.online-circle{
+    position: absolute;
+    z-index: 1000;
+    left: 100px;
+    top: 30px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    background-color: #4BB34B;
+}
+
+#user-profile{
+    cursor: pointer;
+}
+
+
+
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.image-caption {
+    position: absolute;
+    bottom: 1px;
+    left: 0;
+    width: 100%;
+    color: #111;
+    font-size: 12px;
+    padding: 10px;
+    box-sizing: border-box;
+    opacity: 0;
+
+    transition: opacity 0.3s;
+}
+
+.image-container:hover .image-caption {
+    opacity: 1;
+}
+
+.image-container:hover img{
+    filter: brightness(40%);
+
+}
+
+.image-container img:hover + .image-caption {
+    opacity: 1;
+}
